word-wrap fix

--- a/src/Components/ChatRoom/ChatMessage.scss
+++ b/src/Components/ChatRoom/ChatMessage.scss
@@ -16,6 +16,8 @@
 }
 
 .MessageText {
+    height: auto;
+    word-wrap: break-word;
     border-radius: 5px;
     padding: 3px;
     padding-right: 5px;
